force-app/main/default/objects/Apttus__Obligation__c/Apttus__Obligation__c.object-meta.xml
<CustomObject>
    <description>Represents an obligation associated with an agreement</description>
    <label>Obligation</label>
    <nameField>
        <displayFormat>OBL-{0000000}</displayFormat>
        <label>Obligation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obligations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>