force-app/main/default/objects/Apttus__Obligation__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <description>The obligation description</description>
    <inlineHelpText>The obligation description. Usually generated by the back-end.</inlineHelpText>
    <label>Description</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>