force-app/main/default/objects/Apttus__Obligation__c/fields/Apttus__RevRec_Rule__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RevRec_Rule__c</fullName>
    <description>The revenue recognition rule associated with the obligation</description>
    <inlineHelpText>The revenue recognition rule associated with the obligation</inlineHelpText>
    <label>Revenue Recognition Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Ratable</fullName>
                <default>true</default>
                <label>Ratable</label>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>