force-app/main/default/objects/Apttus__Obligation__c/fields/Apttus__StartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__StartDate__c</fullName>
    <description>The obligation start date.</description>
    <inlineHelpText>The obligation start date. Minimum of all related Agreement Line Item contract original start date</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>