force-app/main/default/objects/Apttus__Obligation__c/fields/Apttus__TransactionPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TransactionPrice__c</fullName>
    <description>The transaction price.</description>
    <inlineHelpText>1.       Lone Transaction Price for single Agreement Line Item
2.       Aggregate Transaction Price for multiple Agreement Line Items
3.       Partial Transaction Price for when a Split Policy is applied to a single Agreement Line Item</inlineHelpText>
    <label>Transaction Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>