force-app/main/default/objects/Apttus__Obligation__c/fields/Apttus__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Type__c</fullName>
    <description>The obligation type</description>
    <inlineHelpText>The obligation type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>